# ai-rag-devops

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
configs/: bm25.yaml  default.yaml  dense.yaml  dense_answers.yaml  dense_answers_sample.yaml  dense_rerank.yaml  dense_rerank_answers.yaml  dense_rerank_answers_sample.yaml  hybrid.yaml  prompts.yaml
data/eval/: gold_qa.jsonl
data/processed/: chunks.jsonl
docs/: architecture.md  findings.md
experiments/results/: answer_latency_summary.json  answer_scorecard_summary.json  bm25_predictions.jsonl  bm25_retrieval_eval.jsonl  bm25_retrieval_summary.json  dense_answers.jsonl  dense_answers_sample.jsonl  dense_predictions.jsonl  dense_rerank_answer_latency_summary.json  dense_rerank_answer_scorecard.json  dense_rerank_answers.jsonl  dense_rerank_answers_sample.jsonl  dense_rerank_predictions.jsonl  dense_rerank_retrieval_eval.jsonl  dense_rerank_retrieval_summary.json  dense_retrieval_eval.jsonl  dense_retrieval_summary.json  final_answer_latency_summary.json  final_answer_scorecard_summary.json  hybrid_predictions.jsonl  hybrid_retrieval_eval.jsonl  hybrid_retrieval_summary.json  retrieval_overlap_analysis.jsonl  retrieval_overlap_summary.json
scripts/: smoke_pipeline.py
src/: pipeline.py
src/common/: config.py
src/embeddings/: embedder.py
src/eval/: analyze_retrieval_overlap.py  evaluate_answer_scorecard.py  prediction_runner.py  retrieval_eval.py  run_bm25_predictions.py  run_dense_answers.py  run_dense_rerank_predictions.py  (+3 more)
tests/: test_bm25_manual.py  test_loader.py  test_pipeline.py
(+10 files in other folders)
